[package]
name = "to_mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.3.0"
mongodb = "2.2.2"

tokio = { version = "1", features = ["full"] }

futures = "0.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
]
